compiler/tests/semantic/output/bisheng_test_functions_semantic.txt
test_functions.c:7:5: error: redefinition of 'add'
    7 | int add(int a, int b) {
      |     ^
test_functions.c:2:5: note: previous definition is here
    2 | int add(int a, int b) {
      |     ^
test_functions.c:13:5: error: conflicting types for 'multiply'
   13 | int multiply(int a, int b) {  // 参数数量不匹配
      |     ^
test_functions.c:12:5: note: previous declaration is here
   12 | int multiply(int a, int b, int c);
      |     ^
test_functions.c:24:19: error: call to undeclared function 'undefined_func'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   24 |     int result3 = undefined_func(1, 2);
      |                   ^
3 errors generated.
